# u-mem

./: .gitignore  README.md  pyproject.toml
src/umem/: config.py  database.py  server.py  setup_cli.py
src/umem/hooks/: pre_compact.py  session_start.py  utils.py
tests/: conftest.py  test_server.py
