[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "u-mem"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["mcp[cli]>=1.9"]

[project.scripts]
u-mem        = "umem.server:main"
u-mem-setup  = "umem.setup_cli:main"
umem-pre-compact   = "umem.hooks.pre_compact:main"
umem-session-start = "umem.hooks.session_start:main"

[tool.hatch.build.targets.wheel]
packages = ["src/umem"]

[tool.pytest.ini_options]
testpaths = ["tests"]
